--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "axios": "^1.6.2",
     "node-cron": "^3.0.3",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "better-sqlite3": "^9.2.2"
   }
 }
 
